<resources>
    <string name="app_name">Principal</string>

    <string name="mensaje_snackbar">SnackBarKotlin Example</string>
    <string name="user1">John</string>
    <string name="email1">john@gmail.com</string>
    <string name="user2">Andrew</string>
    <string name="email2">andrew@gmail.com</string>
    <string name="user3">Kunal</string>
    <string name="email3">kunal@gmail.com</string>


    <string name="label_title">Mi aplicación de Negocios</string>
    <string name="btn_services">Servicios</string>
    <string name="btn_portfolio">Portafolio</string>
    <string name="btn_about_me">Acerca de mi</string>
    <string name="btn_contact">Contacto</string>
    <string name="btn_social_networks">Redes Sociales</string>
    <string name="action_search">Buscar</string>
    <string name="action_setting">Configuración</string>
    <string name="err_undefined_event">Evento no definido</string>
</resources>
